@@ -99,6 +99,7 @@ partCombineListener = \layout {
     \context {
 	\Score
 	skipTypesetting = ##t
+	ignoreBarChecks = ##t 
     }
 }
 
