@@ -1,3 +1,10 @@
+2005-04-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* ly/declarations-init.ly (partCombineListener): use
+	ignoreBarChecks. Fixes: warn-partcombine-barcheck.ly
+
+	* lily/bar-check-iterator.cc (process): ignoreBarChecks property.
+
 2005-04-04  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* lily/text-item.cc: Fix link.
